Ensure vs-whitespace is normal weight
Fixes #17997

--- a/src/vs/editor/browser/widget/media/tokens.css
+++ b/src/vs/editor/browser/widget/media/tokens.css
@@ -5,6 +5,7 @@
 
 .monaco-editor .token.vs-whitespace {
 	display:inline-block;
+	font-weight: normal !important;
 }
 .monaco-editor.hc-black .token {
 	mix-blend-mode: difference;
